--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         <link rel="stylesheet" href="assets/css/styles.min.css">
     </head>
-    <body class="cv" style="background-image: url('/assets/img/wall3.jpeg');">
+    <body class="cv" style="background-image: url('https://github.com/Bridjes/my_cv/blob/master/assets/img/wall3.jpeg');">
         <header data-aos="fade-down" class="head">
             <div class="photo"><img data-aos="zoom-in" data-aos-delay="200" src="assets/img/Фотка.jpg?h=48a520228b482cc014a6155a3f386938"></div>
             <div class="info">
@@ -100,7 +100,7 @@
                             Разработка и внедрение средств автоматизации рабочих процессов.
                         </span>
                     </div>
-                    <div class="border-transperent" style="background-image: url('/assets/img/wall3.jpeg');"></div>
+                    <div class="border-transperent" style="background-image: url('https://github.com/Bridjes/my_cv/blob/master/assets/img/wall3.jpeg');"></div>
                 </div>
             </div>
             <div class="exps">
@@ -115,7 +115,7 @@
                             Сбор и передача информации о "багах" разработчикам сервиса.
                         </span>
                     </div>
-                    <div class="border-transperent" style="background-image: url('/assets/img/wall3.jpeg');"></div>
+                    <div class="border-transperent" style="background-image: url('https://github.com/Bridjes/my_cv/blob/master/assets/img/wall3.jpeg');"></div>
                 </div>
             </div>
             <div class="exps">
