--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </span>
             </div>
         </section>
-        <section>
+        <section data-aos="fade-up" data-aos-delay="1300">
             <div class="name"><span>НАВЫКИ</span></div>
             <div class="text-shell">
                 <div class="text-block"><span>Python</span></div>
@@ -75,7 +75,7 @@
                 <div class="text-block"><span>Jinja2</span></div>
             </div>
         </section>
-        <section>
+        <section  data-aos="fade-up" data-aos-delay="1400">
             <div class="name"><span>ЛИЧНОСТНЫЕ НАВЫКИ</span></div>
             <div class="text-shell">
                 <div class="text-block"><span>Командная работа</span></div>
