--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="text-block"><span>Jinja2</span></div>
             </div>
         </section>
-        <section  data-aos="fade-up" data-aos-delay="1400">
+        <section  data-aos="fade-up">
             <div class="name"><span>ЛИЧНОСТНЫЕ НАВЫКИ</span></div>
             <div class="text-shell">
                 <div class="text-block"><span>Командная работа</span></div>
