--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </span>
             </div>
         </section>
-        <section data-aos="fade-up" data-aos-delay="1300">
+        <section data-aos="fade-up">
             <div class="name"><span>НАВЫКИ</span></div>
             <div class="text-shell">
                 <div class="text-block"><span>Python</span></div>
