--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="about-me">
             <div class="name"><span>О СЕБЕ</span></div>
             <div class="text">
                 <span>
@@ -164,6 +164,7 @@
                 </span>
             </div>
         </section>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script><script src="assets/js/script.min.js?h=db819411bdb67e9cacbaa56af5f94215"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+        <script src="assets/js/script.min.js?h=db819411bdb67e9cacbaa56af5f94215"></script>
     </body>
 </html>
