Фикс адаптива, анимации и добавление содержимого

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </header>
-        <section data-aos="fade-up" data-aos-delay="1200">
+        <section data-aos="fade-up">
             <div class="name"><span>ОБЩИЕ СВЕДЕНИЯ</span></div>
             <div class="text">
                 <span>
@@ -63,16 +63,23 @@
             <div class="name"><span>НАВЫКИ</span></div>
             <div class="text-shell">
                 <div class="text-block"><span>Python</span></div>
-                <div class="text-block"><span>Flask</span></div>
-                <div class="text-block"><span>ООП</span></div>
-                <div class="text-block"><span>Django</span></div>
-                <div class="text-block"><span>Aiogram</span></div>
-                <div class="text-block"><span>ORM</span></div>
-                <div class="text-block"><span>Django Rest Framework</span></div>
                 <div class="text-block"><span>SQLite3</span></div>
-                <div class="text-block"><span>JS/html/css</span></div>
+                <div class="text-block"><span>Django</span></div>
+                <div class="text-block"><span>Django Rest Framework</span></div>
+                <div class="text-block"><span>Djoser</span></div>
+                <div class="text-block"><span>JSON Web Token</span></div>
+                <div class="text-block"><span>Flask</span></div>
+                <div class="text-block"><span>Flask-SQLALChemy</span></div>
+                <div class="text-block"><span>Flask-login</span></div>
+                <div class="text-block"><span>Aiogram</span></div>
                 <div class="text-block"><span>RestAPI</span></div>
+                <div class="text-block"><span>ORM</span></div>
+                <div class="text-block"><span>ООП</span></div>
                 <div class="text-block"><span>Jinja2</span></div>
+                <div class="text-block"><span>HTML</span></div>
+                <div class="text-block"><span>CSS</span></div>
+                <div class="text-block"><span>JS</span></div>
+                <div class="text-block"><span>Bootstrap</span></div>
             </div>
         </section>
         <section  data-aos="fade-up">
@@ -85,7 +92,7 @@
                 <div class="text-block"><span>Коммуникативность</span></div>
             </div>
         </section>
-        <section>
+        <section data-aos="fade-up">
             <div class="name"><span>ОПЫТ РАБОТЫ</span></div>
             <div class="exps">
                 <div class="exp">
@@ -133,7 +140,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section data-aos="fade-up">
             <div class="name"><span>ОБРАЗОВАНИЕ</span></div>
             <div class="edus">
                 <div class="edu">
@@ -151,7 +158,7 @@
                 </div>
             </div>
         </section>
-        <section class="about-me">
+        <section data-aos="fade-up" class="about-me">
             <div class="name"><span>О СЕБЕ</span></div>
             <div class="text">
                 <span>
