Фикс адаптива и анимации

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </header>
+
         <section data-aos="fade-up">
             <div class="name"><span>ОБЩИЕ СВЕДЕНИЯ</span></div>
             <div class="text">
@@ -59,6 +60,7 @@
                 </span>
             </div>
         </section>
+
         <section data-aos="fade-up">
             <div class="name"><span>НАВЫКИ</span></div>
             <div class="text-shell">
@@ -82,6 +84,7 @@
                 <div class="text-block"><span>Bootstrap</span></div>
             </div>
         </section>
+
         <section  data-aos="fade-up">
             <div class="name"><span>ЛИЧНОСТНЫЕ НАВЫКИ</span></div>
             <div class="text-shell">
@@ -92,64 +95,65 @@
                 <div class="text-block"><span>Коммуникативность</span></div>
             </div>
         </section>
-        <section data-aos="fade-up">
+
+        <div data-aos="fade-up" class="blinds-first">
             <div class="name"><span>ОПЫТ РАБОТЫ</span></div>
-            <div class="exps">
-                <div class="exp">
-                    <div class="exp-name"><span>УЗ "ГКРД №2"</span></div>
-                    <div class="exp-speciality"><span>Системный администратор</span></div>
-                    <div class="exp-term"><span>февраль 2021 - сейчас</span></div>
-                    <div class="exp-description">
-                        <span>
-                            Администрирование локальной сети.
-                            Установка и настройка софта.
-                            Администрирование программного комплекса АИС "Клиника".
-                            Разработка и внедрение средств автоматизации рабочих процессов.
-                        </span>
-                    </div>
-                    <div class="border-transperent"></div>
+            <div class="exp">
+                <div class="exp-name"><span>УЗ "ГКРД №2"</span></div>
+                <div class="exp-speciality"><span>Системный администратор</span></div>
+                <div class="exp-term"><span>февраль 2021 - сейчас</span></div>
+                <div class="exp-description">
+                    <span>
+                        Администрирование локальной сети.
+                        Установка и настройка софта.
+                        Администрирование программного комплекса АИС "Клиника".
+                        Разработка и внедрение средств автоматизации рабочих процессов.
+                    </span>
                 </div>
             </div>
-            <div class="exps">
-                <div class="exp">
-                    <div class="exp-name"><span>Uber Systems Bel LLC</span></div>
-                    <div class="exp-speciality"><span>Специалист технической поддержки</span></div>
-                    <div class="exp-term"><span>июль 2019 - июнь 2020</span></div>
-                    <div class="exp-description">
-                        <span>
-                            Техническая поддержка служб сервиса.
-                            Разработка и внедрение скриптов и инструментов в админках сервиса.
-                            Сбор и передача информации о "багах" разработчикам сервиса.
-                        </span>
-                    </div>
-                    <div class="border-transperent"></div>
+            </div>
+        </div>
+        <div data-aos="fade-up" class="blinds">
+            <div class="exp">
+                <div class="exp-name"><span>Uber Systems Bel LLC</span></div>
+                <div class="exp-speciality"><span>Специалист технической поддержки</span></div>
+                <div class="exp-term"><span>июль 2019 - июнь 2020</span></div>
+                <div class="exp-description">
+                    <span>
+                        Техническая поддержка служб сервиса.
+                        Разработка и внедрение скриптов и инструментов в админках сервиса.
+                        Сбор и передача информации о "багах" разработчикам сервиса.
+                    </span>
+                </div>
+                <div class="border-transperent"></div>
+            </div>
+        </div>
+        <div data-aos="fade-up" class="blinds-last">
+            <div class="exp">
+                <div class="exp-name"><span>ОАО "АГАТ-СИСТЕМ"</span></div>
+                <div class="exp-speciality"><span>Инженер</span></div>
+                <div class="exp-term"><span>июль 2017 - июнь 2019</span></div>
+                <div class="exp-description">
+                    <span>
+                        Разработка принципиальных схем радиоэлектронных аппаратных комплексов.
+                        Установка и настройка прошивок в микроконтроллеры.
+                        Пусконаладка и тестирование оборудования.
+                    </span>
                 </div>
             </div>
-            <div class="exps">
-                <div class="exp">
-                    <div class="exp-name"><span>ОАО "АГАТ-СИСТЕМ"</span></div>
-                    <div class="exp-speciality"><span>Инженер</span></div>
-                    <div class="exp-term"><span>июль 2017 - июнь 2019</span></div>
-                    <div class="exp-description">
-                        <span>
-                            Разработка принципиальных схем радиоэлектронных аппаратных комплексов.
-                            Установка и настройка прошивок в микроконтроллеры.
-                            Пусконаладка и тестирование оборудования.
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section data-aos="fade-up">
+        </div>
+
+        <div data-aos="fade-up" class="blinds-first">
             <div class="name"><span>ОБРАЗОВАНИЕ</span></div>
-            <div class="edus">
-                <div class="edu">
-                    <div class="edu-img"><img src="assets/img/bsuir.png?h=48a520228b482cc014a6155a3f386938"></div>
-                    <div class="edu-name"><span>БГУИР</span></div>
-                    <div class="edu-speciality"><span>                    Инженер по инфокоммуникациям                </span></div>
-                    <div class="edu-term"><span>сентябрь 2013 - июнь 2017</span></div>
-                    <div class="border-transperent"></div>
-                </div>
+            <div class="edu">
+                <div class="edu-img"><img src="assets/img/bsuir.png?h=48a520228b482cc014a6155a3f386938"></div>
+                <div class="edu-name"><span>БГУИР</span></div>
+                <div class="edu-speciality"><span>                    Инженер по инфокоммуникациям                </span></div>
+                <div class="edu-term"><span>сентябрь 2013 - июнь 2017</span></div>
+                <div class="border-transperent"></div>
+            </div>
+        </div>
+        <div data-aos="fade-up" class="blinds-last">
                 <div class="edu">
                     <div class="edu-img"><img src="assets/img/over.png?h=48a520228b482cc014a6155a3f386938"></div>
                     <div class="edu-name"><span>                    IT Overone                </span></div>
@@ -157,7 +161,8 @@
                     <div class="edu-term"><span>сентябрь 2022 - июль 2023</span></div>
                 </div>
             </div>
-        </section>
+        </div>
+
         <section data-aos="fade-up" class="about-me">
             <div class="name"><span>О СЕБЕ</span></div>
             <div class="text">
