Фикс адаптива финал

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="text-block"><span>Python</span></div>
                 <div class="text-block"><span>SQLite3</span></div>
                 <div class="text-block"><span>Django</span></div>
-                <div class="text-block"><span>Django Rest Framework</span></div>
+                <div class="text-block"><span>DRF</span></div>
                 <div class="text-block"><span>Djoser</span></div>
-                <div class="text-block"><span>JSON Web Token</span></div>
+                <div class="text-block"><span>JWT</span></div>
                 <div class="text-block"><span>Flask</span></div>
                 <div class="text-block"><span>Flask-SQLALChemy</span></div>
                 <div class="text-block"><span>Flask-login</span></div>
