--- a/index.html
+++ b/index.html
@@ -53,10 +53,27 @@
             <div class="name"><span>ОБЩИЕ СВЕДЕНИЯ</span></div>
             <div class="text">
                 <span>
-                    Я Python разработчик, находящийся в поиске хорошей сплочённой команды для совместной работы в интересных проектах.
-                    Обожаю групповую динамику, и быстро осваиваю различные новинки.
-                    Уверенно владею знаниями и опытом применения таких фреймворков как Django, drf и Flask.
-                    Держу в свои скилы в тонусе как в рабочее время, так и в фрилансе.
+                    Я разработчик на Python, и у меня есть опыт разработки веб-приложений с использованием фреймворков Django и Flask.
+                    <br><br>
+                    Обладаю обширными знаниями в Django:
+                    <br>
+                    - Django ORM;
+                    <br>
+                    - Django REST Framework;
+                    <br>
+                    - Djoser-authentication;
+                    <br>
+                    - JWT-authentication;
+                    <br>
+                    - Session-based authentication
+                    <br><br>
+                    Также владею знаниями во Flask:
+                    <br>
+                    - Flask-SQLALChemy
+                    <br>
+                    - Flask-login-authentication
+                    <br><br>
+                    Также есть опты использования Aiogram совместно с RestAPI в составе одного из проектов созданных мной за время работы во фрилансе.
                 </span>
             </div>
         </section>
@@ -125,7 +142,6 @@
                         Сбор и передача информации о "багах" разработчикам сервиса.
                     </span>
                 </div>
-                <div class="border-transperent"></div>
             </div>
         </div>
         <div data-aos="fade-up" class="blinds-last">
@@ -150,7 +166,6 @@
                 <div class="edu-name"><span>БГУИР</span></div>
                 <div class="edu-speciality"><span>                    Инженер по инфокоммуникациям                </span></div>
                 <div class="edu-term"><span>сентябрь 2013 - июнь 2017</span></div>
-                <div class="border-transperent"></div>
             </div>
         </div>
         <div data-aos="fade-up" class="blinds-last">
