--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <div class="name"><span>ОБЩИЕ СВЕДЕНИЯ</span></div>
             <div class="text">
                 <span>
-                    Я разработчик на Python, и у меня есть опыт разработки веб-приложений с использованием фреймворков Django и Flask.
-                    <br><br>
-                    Обладаю обширными знаниями в Django:
+                    Я разработчик на Python, и обладаю обширными знаниями и опытом разработки на фреймворке Django, используя следующий стек технологий:
                     <br>
                     - Django ORM;
                     <br>
@@ -73,7 +71,7 @@
                     <br>
                     - Flask-login-authentication
                     <br><br>
-                    Также есть опты использования Aiogram совместно с RestAPI в составе одного из проектов созданных мной за время работы во фрилансе.
+                    Также есть опыт использования Aiogram совместно с RestAPI в составе одного из проектов созданных мной за время работы во фрилансе.
                 </span>
             </div>
         </section>
